--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "author": "Sergei Voropaev <nifelim96@gmail.com>",
+  "license": "MIT"
 }
