--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://Varapushka.github.io/homework-front-main",
+  "homepage": "https://Varapushka.github.io/home-work-tuesday",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
